k8s_template/portal/api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: fhd-portal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-sa
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups: [33]
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: api
          image: <IMAGE_PLACEHOLDER>
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: config-php-env
              mountPath: /var/www/fhd-portal/htdocs/api/.env
              subPath: .env
          resources:
            limits:
              cpu: 50m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 100Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 60
            failureThreshold: 20
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 60
            failureThreshold: 20
      volumes:
        - name: tmp
          emptyDir: {}
        - name: config-php-env
          secret:
            secretName: php-env
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: fhd-portal
spec:
  selector:
    app: backend
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
