k8s_template/portal/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: <YOUR_CERT_ISSUER>
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/x-forwarded-port: "true"
  name: fhd-portal-webserver-apache
  namespace: fhd-portal
spec:
  ingressClassName: nginx
  rules:
  - host: <YOUR_HOST_FQDN>
    http:
      paths:
      - backend:
          service:
            name: webserver
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - <YOUR_HOST_FQDN>
    secretName: fhd-portal-tls-secret

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: <YOUR_HOST_FQDN>
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/x-forwarded-port: "true"
  name: fhd-portal-backend
  namespace: fhd-portal
spec:
  ingressClassName: nginx
  rules:
  - host: <YOUR_HOST_FQDN>
    http:
      paths:
      - backend:
          service:
            name: api
            port:
              name: api
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - <YOUR_HOST_FQDN>
    secretName: fhd-portal-backend-tls-secret
